<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.VerInfoPersonas">

    <ImageView
        android:id="@+id/ivImagen"
        android:layout_width="186dp"
        android:layout_height="169dp"
        android:contentDescription="@string/imagenurl"
        app:layout_constraintStart_toStartOf="@+id/glVertical3"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal5"
        app:srcCompat="@drawable/ic_launcher_foreground" />
    <!-- Textos con etiqueta, no cambios. -->
    <TextView
        android:id="@+id/tvEtiquetaNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        app:layout_constraintEnd_toStartOf="@+id/glVertical1"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal1" />

    <TextView
        android:id="@+id/tvEtiquetaId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        app:layout_constraintEnd_toStartOf="@+id/glVertical1"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal2" />

    <TextView
        android:id="@+id/tvEtiquetaDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripci_n"
        app:layout_constraintEnd_toStartOf="@+id/glVertical1"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal3" />

    <!-- Texto que cambia, que se pinta en el código -->

    <TextView
        android:id="@+id/tvEtiquetaModificado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="92dp"
        android:text="@string/modificado"
        app:layout_constraintEnd_toStartOf="@+id/glVertical1"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal4" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/glVertical2"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal1" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/glVertical2"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal2" />

    <EditText
        android:id="@+id/tvModificado"
        android:layout_width="258dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@+id/glVertical3"
        app:layout_constraintTop_toBottomOf="@+id/tvEtiquetaModificado" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="119dp"
        android:layout_height="492dp"
        app:layout_constraintStart_toStartOf="@+id/glVertical2"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal3" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvComics"
        android:layout_width="259dp"
        android:layout_height="201dp"
        app:layout_constraintEnd_toStartOf="@+id/glVertical1"
        app:layout_constraintTop_toTopOf="@+id/glHorizontal6"
        tools:listitem="@layout/comics_item" />

    <!-- Líneas guias para ayudar.-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="275dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="286dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="43dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="69dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="96dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="220dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="29dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />


</androidx.constraintlayout.widget.ConstraintLayout>